# ThinkFlow-RDT-1B

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_uris.txt
configs/: b0_rdt1b_lora.yaml  tiny_smoke.yaml
dataset/mock_dataset/bc_z_dataset/: audit.json  test_bc_z_linux.ipynb  test_bcz.ipynb
scratch/: check_dynamic_cache.py  check_eval_values.py  check_qwen_config.py  check_qwen_encoders.py  check_qwen_kv.py  check_qwen_seq_len.py  check_qwen_tokens.py  check_schedulers.py  check_weights.py  download_encoders.py  test_peft_load.py
scripts/: analyze_bcz_gripper.py  cache_features_template.py  compute_action_stats.py  compute_sampled_action_stats.py  download_datasets.py  estimate_part_feature_storage.py  evaluate_rdt.py  inspect_lora_targets.py  make_synthetic_cache.py  materialize_upload_stage_datasets.py  precompute_all_features.py  precompute_qwen_features.py  precompute_real_qwen_probe.py  sample_cached.py  scratch_compute_shards.py  smoke_test_model_only.py  train_b0.py  train_b0_online.py  train_b0_online_siglip.py  train_droid_online.py  upload_dataset.py  upload_fyp_stage3_dataset.py  upload_raw_stage_shards.py
src/: test.ipynb
src/thinkflow_rdt/: __init__.py  checkpoint.py  config.py  data.py  lora.py  model.py  rdt_imports.py  train.py
src/thinkflow_rdt.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_action_stats.py  test_bridge_adapter.py  test_combined_adapter.py  test_combined_lazy_adapter.py  test_data.py  test_droid_adapter.py  test_fractal_adapter.py  test_kuka_adapter.py  test_sample_filtering.py
(+23 files in other folders)
