[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "thinkflow-rdt"
version = "0.1.0"
description = "SFT-conditioned RDT-1B diffusion action model with LoRA"
requires-python = ">=3.12"
dependencies = [
  "torch==2.10.0",
  "torchvision==0.25.0",
  "accelerate>=0.30",
  "diffusers>=0.27",
  "huggingface-hub>=0.23",
  "numpy>=1.24,<2.0.0",
  "peft>=0.11",
  "PyYAML>=6.0",
  "safetensors>=0.4",
  "tensorboard>=2.15",
  "timm>=0.9",
  "tqdm>=4.66",
  "transformers>=4.44",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
index = [
  { name = "pytorch", url = "https://download.pytorch.org/whl/cu128", explicit = true }
]

[tool.uv.sources]
torch = { index = "pytorch" }
torchvision = { index = "pytorch" }
